--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -3,7 +3,7 @@
 }
 
 .container{
-	background-color: white;
+	background-image: url(/assets/img/fondo2.jpg);
 }
 
 .form{
@@ -12,4 +12,12 @@
 
 .button{
 	float: right;
+}
+
+.radio{
+	margin-right: 15px;
+}
+
+.horis{
+	margin-bottom: 18px;
 }
